--- a/testimonial.html
+++ b/testimonial.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cateringz/Testimonial</title>
-    <link rel="stylesheet" href="/CSS/styles-testimonialpage.css">
+    <link rel="stylesheet" href="CSS/styles-testimonialpage.css">
 </head>
 <body>
 
@@ -13,18 +13,18 @@
     
         <div class="navbar-container">
              <!-- logo -->
-            <a href="Index.html" class="navbar-logo" target="_self"><img src="/Images/Logo.png" alt="" class="logo" title="To Homepage"></a>
+            <a href="Index.html" class="navbar-logo" target="_self"><img src="Images/Logo.png" alt="" class="logo" title="To Homepage"></a>
 
             <!-- menu -->
             <ul class="navbar-menu">
                  <li class="navbar-list">
-                    <a href="/aboutUs.html" class="navbar-links">About Us</a>
+                    <a href="aboutUs.html" class="navbar-links">About Us</a>
                 </li>
                 <li class="navbar-list">
-                    <a href="/ourProducts.html" class="navbar-links">Products</a>
+                    <a href="ourProducts.html" class="navbar-links">Products</a>
                 </li>
                 <li class="navbar-list">
-                    <a href="/testimonial.html" class="navbar-links">Testimonial</a>
+                    <a href="testimonial.html" class="navbar-links">Testimonial</a>
                 </li>
                 <li class="navbar-btn">
                     <a href="signIn.html" class="button">Sign In</a>
@@ -64,13 +64,13 @@
                 </p>
             </div>
             <div class="customer-photo-container">
-                <img src="/Images/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="" id="customer-photo">
+                <img src="Images/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="" id="customer-photo">
             </div>
         </div>
 
         <div class="testimonial-container">
             <div class="customer-photo-container">
-                <img src="/Images/imansyah-muhamad-putera-KchIV_GDy6U-unsplash.jpg" alt="" id="customer-photo">
+                <img src="Images/imansyah-muhamad-putera-KchIV_GDy6U-unsplash.jpg" alt="" id="customer-photo">
             </div>
 
             <div class="testimonial-content-right">
@@ -93,13 +93,13 @@
                 </p>
             </div>
             <div class="customer-photo-container">
-                <img src="/Images/michael-dam-mEZ3PoFGs_k-unsplash.jpg" alt="" id="customer-photo">
+                <img src="Images/michael-dam-mEZ3PoFGs_k-unsplash.jpg" alt="" id="customer-photo">
             </div>
         </div>
         
         <div class="testimonial-container">
             <div class="customer-photo-container">
-                <img src="/Images/warren-VVEwJJRRHgk-unsplash.jpg" alt="" id="customer-photo">
+                <img src="Images/warren-VVEwJJRRHgk-unsplash.jpg" alt="" id="customer-photo">
             </div>
 
             <div class="testimonial-content-right">
@@ -159,28 +159,28 @@
         <div class="social-media">
             <div class="socialMedia-wrap">
                 <div class="footer-logo">
-                    <a href="Index.html" target="_self"><img src="/Images/Logo.png" alt="" id="footer-logo" title="To Homepage"></a>
+                    <a href="Index.html" target="_self"><img src="Images/Logo.png" alt="" id="footer-logo" title="To Homepage"></a>
                 </div>
                 <p class="website-right">©Cateringz 2024. All right reserved</p>
                 <ul class="socialMedia-icons">
                     <li>
                         <a href="https://www.twitter.com" class="social-icon-link" target="_blank">
-                            <img src="/Images/twitter_x-logo-freelogovectors.net_.png" alt="" title="To twitter/x" id="socialMedia-logo">
+                            <img src="Images/twitter_x-logo-freelogovectors.net_.png" alt="" title="To twitter/x" id="socialMedia-logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.facebook.com" class="social-icon-link" target="_blank">
-                            <img src="/Images/facebook-logo-freelogovectors.net_.png" alt="" title="To facebook" id="socialMedia-logo">
+                            <img src="Images/facebook-logo-freelogovectors.net_.png" alt="" title="To facebook" id="socialMedia-logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.instagram.com" class="social-icon-link" target="_blank">
-                            <img src="/Images/instagram-logo-1-freelogovectors.net_.png" alt="" title="To Instagram" id="socialMedia-logo">
+                            <img src="Images/instagram-logo-1-freelogovectors.net_.png" alt="" title="To Instagram" id="socialMedia-logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.instagram.com" class="social-icon-link" target="_blank">
-                            <img src="/Images/whatsapp-logo3-freelogovectors.net_.png" alt="" title="To Whatsapp" id="socialMedia-logo">
+                            <img src="Images/whatsapp-logo3-freelogovectors.net_.png" alt="" title="To Whatsapp" id="socialMedia-logo">
                         </a>
                     </li>
                 </ul>
@@ -190,6 +190,6 @@
     </div>
 
 
-    <script src="/Javascript/navbar.js"></script>
+    <script src="Javascript/navbar.js"></script>
 </body>
 </html>
