--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cateringz/AboutUs</title>
-    <link rel="stylesheet" href="/CSS/styles_aboutUs.css">
+    <link rel="stylesheet" href="CSS/styles_aboutUs.css">
 </head>
 <body>
 
