--- a/ourProducts.html
+++ b/ourProducts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cateringz/Products</title>
-    <link rel="stylesheet" href="/CSS/styles_products.css">
+    <link rel="stylesheet" href="CSS/styles_products.css">
 </head>
 <body>
 
@@ -18,13 +18,13 @@
             <!-- menu -->
             <ul class="navbar-menu">
                 <li class="navbar-list">
-                    <a href="/aboutUs.html" class="navbar-links">About Us</a>
+                    <a href="aboutUs.html" class="navbar-links">About Us</a>
                 </li>
                 <li class="navbar-list">
-                    <a href="/ourProducts.html" class="navbar-links">Products</a>
+                    <a href="ourProducts.html" class="navbar-links">Products</a>
                 </li>
                 <li class="navbar-list">
-                    <a href="/testimonial.html" class="navbar-links">Testimonial</a>
+                    <a href="testimonial.html" class="navbar-links">Testimonial</a>
                 </li>
                 <li class="navbar-btn">
                     <a href="signIn.html" class="button">Sign In</a>
@@ -42,7 +42,7 @@
         </div>
     </nav>
 
-        <script src="/Javascript/navbar.js"></script>
+        <script src="Javascript/navbar.js"></script>
     </nav>
     <h1>This is our products page</h1>
     <button><a href="Index.html">Return</a></button>
