--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     
         <div class="navbar-container">
              <!-- logo -->
-            <a href="Index.html" class="navbar-logo" target="_self"><img src="/Images/Logo.png" alt="" class="logo" title="To Homepage"></a>
+            <a href="Index.html" class="navbar-logo" target="_self"><img src="Images/Logo.png" alt="" class="logo" title="To Homepage"></a>
 
             <!-- menu -->
             <ul class="navbar-menu">
@@ -188,4 +188,5 @@
     <script src="Javascript/navbar.js"></script>
     <script src="Javascript/slideShow.js"></script>
 </body>
+
 </html>
