--- a/Index.html
+++ b/Index.html
@@ -155,7 +155,7 @@
         <div class="social-media">
             <div class="socialMedia-wrap">
                 <div class="footer-logo">
-                    <a href="Index.html" target="_self"><img src="/Images/Logo.png" alt="" id="footer-logo" title="To Homepage"></a>
+                    <a href="Index.html" target="_self"><img src="Images/Logo.png" alt="" id="footer-logo" title="To Homepage"></a>
                 </div>
                 <p class="website-right">©Cateringz 2024. All right reserved</p>
                 <ul class="socialMedia-icons">
@@ -190,3 +190,4 @@
 </body>
 
 </html>
+
